Build 29 (12.02.2013)
- Added shadow for all buildings
- Added shadow for units. Unfortunately can't find shadow image for Freighter, for now it will be without shadow. 
- Added healing cursor
- Added damage table. Preparing for weapon implementation.
- Added small horizontal bridge building. Still can't correctly build it, some improvements required for pathfinding algorithm.
- Small code optimizations

Build 28 (06.02.2013)
- Preloading right panel images for buildings and units
- Do not start game load until start screen is loaded completely
- Added animation to Advanced Training Facility building
- Added Field Hospital building (it still can't heal)
- Added shadow layer to graphic drawer
- Added shadows for all Headquarter buildings

Build 27 (16.12.2012)
- Freighter automatically choose only nearest objects
- Energy indicator blinking implemented by CSS animation
- Added water indicator
- You can urgently sell water by clicking on indicator
- When selecting construction rig right panel automatically switch to build section

Build 26 (11.12.2012)
- Freighter now can harvest
- Removed Freighter sounds, because they same as Guardian sounds
- Added water sell sound and water sell effect
- Added debug option that allows to see game speed and FPS

Build 25 (10.12.2012)
- Added "Advanced Assembly Plant" building
- Added "Freighter" unit (it still can't harvest)
- Power generator & Water launch pad now constructed with one Freighter unit
- Added "Headquarter 3" building
- Added harvesting cursor

Build 24 (03.12.2012)
- Changed interface cursor
- Units marked blue on right panel when selected building can't produce that unit
- Added "Headquarter 2" building
- Added ability to upgrade buildings
- Added "Advanced Training Facility" building
- Guardian now can shoot (Only in test mode, many things are still not implemented)
- Attack volume changing depends on how far your viewport is placed

Build 23 (27.11.2012)
- Added neutral player